cluster/talos/apps/portainer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portainer
  labels:
    goldilocks.fairwinds.com/enabled: "true"
