cluster/talos/apps/portainer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: portainer
      port:
        number: 9000
  tls:
  - hosts:
    - portainer
